gitops/environments/practicum/self-service/generated/practicum-env-alice-demo-8f73f8/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practicum-env-alice-demo-8f73f8
  namespace: practicum-tks
  annotations:
    demo.deckhouse.io/description: "4 practicum"
    demo.practicum/expires-at: "2026-06-10T00:37:19Z"
  labels:
    app.kubernetes.io/part-of: practicum-demo
    demo.practicum/environment: practicum-env-alice-demo-8f73f8
    demo.practicum/owner: alice-koroleva-practicum
    demo.practicum/expires-at: 20260610T003719Z
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practicum-env-alice-demo-8f73f8
  template:
    metadata:
      labels:
        app: practicum-env-alice-demo-8f73f8
        demo.practicum/environment: practicum-env-alice-demo-8f73f8
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: practicum-env-alice-demo-8f73f8
  namespace: practicum-tks
  annotations:
    demo.deckhouse.io/description: "4 practicum"
    demo.practicum/expires-at: "2026-06-10T00:37:19Z"
  labels:
    app.kubernetes.io/part-of: practicum-demo
    demo.practicum/environment: practicum-env-alice-demo-8f73f8
    demo.practicum/owner: alice-koroleva-practicum
    demo.practicum/expires-at: 20260610T003719Z
spec:
  selector:
    app: practicum-env-alice-demo-8f73f8
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practicum-env-alice-demo-8f73f8
  namespace: practicum-tks
  annotations:
    demo.deckhouse.io/description: "4 practicum"
    demo.practicum/expires-at: "2026-06-10T00:37:19Z"
  labels:
    app.kubernetes.io/part-of: practicum-demo
    demo.practicum/environment: practicum-env-alice-demo-8f73f8
    demo.practicum/owner: alice-koroleva-practicum
    demo.practicum/expires-at: 20260610T003719Z
spec:
  ingressClassName: nginx
  rules:
    - host: practicum-env-alice-demo-8f73f8.d8case.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: practicum-env-alice-demo-8f73f8
                port:
                  name: http
